Resolved footer white space and links

--- a/Client/src/components/footer/Footer.scss
+++ b/Client/src/components/footer/Footer.scss
@@ -1,73 +1,88 @@
 .footer {
-    display: flex;
-    justify-content: center;
-    color: #666;
-    margin: 50px 0px;
-    background-color: #c9cdd7;
-    padding:20px;
-  
-    img {
-      width: 24px;
-      height: 24px;
-    }
-  
-    .container {
-      width: 1400px;
-      .top {
+  display: flex;
+  justify-content: center;
+  color: #666;
+  margin: 50px 0px;
+  margin-top: -20px; //added to fix white space when changing bg color
+  margin-bottom: -20px; //added to fix white space when changing bg color
+  background-color: #e6dfff;
+  padding: 20px;
+
+  img {
+    width: 24px;
+    height: 24px;
+  }
+
+  .container {
+    width: 1400px;
+
+    .top {
+      display: flex;
+      justify-content: space-between;
+
+      .item {
         display: flex;
-        justify-content: space-between;
-        .item {
-          display: flex;
-          flex-direction: column;
-          gap: 20px;
-          h2 {
-            font-size: 16px;
-            color: #555;
-          }
-          span {
-            font-weight: 300;
-          }
+        flex-direction: column;
+        gap: 20px;
+
+        h2 {
+          font-size: 16px;
+          color: #555;
+        }
+
+        span {
+          font-weight: 300;
+        }
+
+        /* Override link styles */
+        a {
+          text-decoration: none; /* Remove underline */
+          color: inherit; /* Inherit color */
+          cursor: pointer; /* Change cursor to pointer on hover */
         }
       }
-  
-      hr {
-        margin: 50px 0px;
-        height: 0;
-        border: 1px solid #ebe9e9;
-      }
-      .bottom {
+    }
+
+    hr {
+      margin: 50px 0px;
+      height: 0;
+      border: 1px solid #ebe9e9;
+    }
+
+    .bottom {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .left {
+        width: max-content;
         display: flex;
         align-items: center;
-        justify-content: space-between;
-  
-        .left {
-          width: max-content;
-          display: flex;
-          align-items: center;
-          gap: 20px;
-  
-          span {
-            font-size: 13px;
-            white-space: nowrap;
-          }
+        gap: 20px;
+
+        span {
+          font-size: 13px;
+          white-space: nowrap;
         }
-        .right {
-          width: max-content;
+      }
+
+      .right {
+        width: max-content;
+        display: flex;
+        align-items: center;
+        gap: 30px;
+
+        .social {
+          display: flex;
+          gap: 20px;
+        }
+
+        .link {
           display: flex;
           align-items: center;
-          gap: 30px;
-  
-          .social {
-            display: flex;
-            gap: 20px;
-          }
-  
-          .link {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-          }
+          gap: 10px;
         }
       }
     }
   }
+}
